--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 </head>
   <body style="background-color:rgba(253, 196, 196, 0.321);">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 100px; padding-left: 40px; ">
-        <a class="navbar-brand" href="/" style="font-size: 40px;">
+        <a class="navbar-brand" href="home.html" style="font-size: 40px;">
             <img src="./static/3.webp" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
 
             Hotel Ganesha, Ranthambhore</a>
@@ -63,17 +63,20 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto" style="padding-right: 160px;">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/rooms">Rooms</a>
+              <a class="nav-link" href="rooms.html">Rooms</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about">Services</a>
+                <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact">Experiences</a>
+                <a class="nav-link" href="experiences.html">Experiences</a>
             </li>
+            <li class="nav-item">
+              <button class="btnLogin-popup"><a class="nav-link" href="login.html">Login</a></button>
+          </li>
           </ul>
         </div>
       </nav>
@@ -168,9 +171,9 @@
         <div class="footer-links">
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Rooms</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Experiences</a></li>
+            <li><a href="rooms.html">Rooms</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="experiences.html">Experiences</a></li>
           </ul>
         </div>
         <div class="footer-social">
