--- a/rooms.html
+++ b/rooms.html
@@ -124,7 +124,7 @@
       <div class="footer-content">
         <div class="footer-links">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="rooms.html">Rooms</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="experiences.html">Experiences</a></li>
