--- a/login.html
+++ b/login.html
@@ -45,19 +45,19 @@
         <!--<span class="icon-close"><ion-icon name="close"></ion-icon></span>-->
         <div class="form-box login">
           <h2>Login</h2>
-          <form action="#">
+          <form id="loginForm" action="#">
             <div class="input-box">
               <span class="icon"><ion-icon name="mail"></ion-icon></span>
-              <input type="email" required>
+              <input type="email" id="loginEmail" required>
               <label>Email</label>
             </div>
             <div class="input-box">
               <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-              <input type="password" required>
+              <input type="password" id="loginPassword" required>
               <label>Password</label>
             </div>
             <div class="remember-forgot">
-              <label><input type="checkbox">Remember Me</label>
+              <label><input type="checkbox" id="rememberMe">Remember Me</label>
               <a href="#">Forgot Password?</a>
             </div>
             <button type="submit" class="btn">Login</button>
@@ -69,22 +69,55 @@
 
 
         <div class="form-box register">
-          <h2>Registeration</h2>
-          <form action="#">
+          <h2>Register</h2>
+          <form id ="registrationForm" action="#">
             <div class="input-box">
               <span class="icon"><ion-icon name="person"></ion-icon></span>
-              <input type="text" required>
-              <label>Username</label>
+              <input type="text" id="firstName" required>
+              <label>First Name</label>
+            </div>
+            <div class="input-box">
+              <span class="icon"><ion-icon name="person"></ion-icon></span>
+              <input type="text" id="lastName" required>
+              <label>Last Name</label>
             </div>
             <div class="input-box">
               <span class="icon"><ion-icon name="mail"></ion-icon></span>
-              <input type="email" required>
+              <input type="email" id="email" required>
               <label>Email</label>
             </div>
             <div class="input-box">
               <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-              <input type="password" required>
+              <input type="password" id="password" required>
               <label>Password</label>
+            </div>
+            <div class="input-box">
+              <input type="text" id="houseNo" required>
+              <label>House Number</label>
+            </div>
+            <div class="input-box">
+              <input type="text" id="city" required>
+              <label>City</label>
+            </div>
+            <div class="input-box">
+              <input type="text" id="state" required>
+              <label>State</label>
+            </div>
+            <div class="input-box">
+              <input type="text" id="country" required>
+              <label>Country</label>
+            </div>
+            <div class="input-box">
+              <input type="number" id="pinCode" required>
+              <label>Pin Code</label>
+            </div>
+            <div class="input-box">
+              <input type="text" id="gender" required>
+              <label>Gender</label>
+            </div>
+            <div class="input-box">
+              <input type="number" id="aadharCardNumber" required>
+              <label>Aadhaar Number</label>
             </div>
             <div class="remember-forgot">
               <label><input type="checkbox">I agree to the terms & conditions</label>
@@ -133,5 +166,95 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+        document.getElementById('registrationForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const firstName = document.getElementById('firstName').value;
+            const lastName = document.getElementById('lastName').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const houseNo = document.getElementById('houseNo').value;
+            const city = document.getElementById('city').value;
+            const state = document.getElementById('state').value;
+            const country = document.getElementById('country').value;
+            const pinCode = document.getElementById('pinCode').value;
+            const gender = document.getElementById('gender').value;
+            const aadharCardNumber = document.getElementById('aadharCardNumber').value;
+
+            const userData = {
+                fName: firstName,
+                lName: lastName,
+                pEmail: email,
+                pswd: password,
+                houseNo: houseNo,
+                city: city,
+                state: state,
+                country: country,
+                pinCode: pinCode,
+                gender: gender,
+                aadharNo: aadharCardNumber
+            };
+
+            axios.post('https://lelotusgrand.herokuapp.com/register', userData)
+                .then(function (response) {
+                    console.log(response.data);
+                    console.log(response.data.localeCompare('fail'));
+                    const i = response.data.localeCompare('fail');
+                    if (i === 0) {
+                        alert('User already exists!');
+                    } else {
+                        // Registration was successful; redirect to the login page
+                        window.location.href = '/login.html'; // Replace with the actual URL of your login page
+                    }
+                })
+                .catch(function (error) {
+                    console.error('There was an error!', error);
+                    alert('Invalid Input or Registration Failed!');
+                    // Handle navigation to an error page or other actions as needed
+                });
+        });
+    </script>
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        const email = document.getElementById('loginEmail').value;
+        const password = document.getElementById('loginPassword').value;
+        const rememberMe = document.getElementById('rememberMe').checked;
+
+        const userData = {
+            pEmail: email,
+            pswd: password
+        };
+
+        axios.post('https://lelotusgrand.herokuapp.com/login', userData)
+            .then(function (response) {
+                localStorage.setItem('token', response.data.token);
+                console.log(localStorage.getItem('token'));
+                // Check the response and redirect as needed
+                if (response.data.success) {
+                    window.location.href = '/user_dashboard.html'; // Redirect to the dashboard page
+                } else {
+                    alert('Login failed. Invalid Credentials.');
+                }
+            })
+            .catch(function (error) {
+                console.error('There was an error!', error);
+                alert('Login failed. Please try again later.');
+            });
+    });
+</script>
+
   </body>
 </html>
