--- a/home.html
+++ b/home.html
@@ -102,8 +102,8 @@
       </div>
       </center>
 
-      <div>
-        <img src="./static/5.jpeg" style="padding-left: 450px; padding-top: 150px;">
+      <div class = "text-center">
+        <img src="./static/5.jpeg" style="max-width: 100%;">
       </div>
       <div>
         <h2 style="padding-left: 50px;">In The Past</h2>
