--- a/services.html
+++ b/services.html
@@ -141,8 +141,8 @@
               </div>
             </div>
             </center>
-            <div>
-              <img src="./static/20.jpg" style="padding-left: 450px; padding-top: 60px;" width="1375">
+            <div class="text-center">
+              <img src="./static/20.jpg" style="max-width: 70%;">
             </div>
             <div>
                 <br>
